--- a/webapp/assets/css/myPageNormal/normalMatching.css
+++ b/webapp/assets/css/myPageNormal/normalMatching.css
@@ -48,7 +48,7 @@ main {
 }
 form{
   margin: 50px 200px;
-  border: 1px solid black;
+  border: 2px solid black;
   border-radius: 15px;
   background-color: rgb(255, 255, 255);
 }
@@ -85,6 +85,8 @@ form{
   margin-right: 100px;
 }
 .matching ul li button{
+  background-color: white;
+  border: 1px solid black;
   height: 50px;
   width: 100px;
   margin: 0px 20px;
