--- a/webapp/assets/css/myPageNormal/normalModify.css
+++ b/webapp/assets/css/myPageNormal/normalModify.css
@@ -17,7 +17,7 @@ main {
 .main_sidebar {
   width: 180px;
   height: 100%;
-  background-color: #2f4db1;
+  background-color: #2F52AA;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -51,7 +51,7 @@ form{
   margin: 10px 150px;
 }
 .arlim{
-  background-color: #f2f2f2;
+  background-color: #EAEAEA;
   display: flex;
   flex-direction: row;
   margin: 0px 30px;
@@ -60,7 +60,6 @@ form{
   height: 100px;
 }
 .arlim div{
-  background-color: blanchedalmond;
   width: 20px;
   height: 20px;
   margin: 20px;
@@ -73,7 +72,7 @@ form{
 form .normalmodify{
   display: flex;
   flex-direction: column;
-  background-color: rgb(255, 255, 255);
+  background-color: #F2F2F2;
   border: 1px solid black;
 }
 .member{
@@ -90,7 +89,7 @@ form .normalmodify{
   align-items: center;
   font-size: 20px;
   border-right: 1px solid black;
-  background-color: rgb(255, 255, 255);
+  background-color: #D9D9D9;
   padding: 5px 0px;
 }
 .myinfo {
@@ -112,7 +111,7 @@ input{
 }
 button{
   margin: 10px;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   width: 100px;
   height: 30px;
@@ -195,7 +194,7 @@ button{
   padding: 10px 30px;
   border: none;
   border-radius: 10px;
-  background-color: #001860;
+  background-color: #1D3266;
   color: white;
   cursor: pointer;
 }
