--- a/webapp/assets/css/myPageNormal/normalQuit.css
+++ b/webapp/assets/css/myPageNormal/normalQuit.css
@@ -123,7 +123,7 @@ form{
 #next{
   height: 50px;
   width: 100px;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   border-radius: 15px;
   font-size: 20px;
@@ -172,7 +172,7 @@ form{
   border: 1px solid black;
 }
 #cancelBtn{
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   border: 1px solid black;
 }
@@ -217,8 +217,8 @@ form{
   border-radius: 15px;
 }
 
-.modal #check {
-  background-color: blue;
+.modal #doneOkBtn {
+  background-color: #2F52AA;
   color: white;
   border: 1px solid black;
 }
