--- a/webapp/assets/css/myPageNormal/normalReference.css
+++ b/webapp/assets/css/myPageNormal/normalReference.css
@@ -17,7 +17,7 @@ main {
 .main_sidebar {
   width: 180px;
   height: 100%;
-  background-color: #2f4db1;
+  background-color: #2F52AA;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -71,7 +71,7 @@ form {
   margin: 0px 150px;
   height: 50px;
   align-items: center;
-  background-color: rgb(191, 201, 201);
+  background-color: #F2F2F2;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
 }
