--- a/webapp/assets/css/post/postDetailNotlogin.css
+++ b/webapp/assets/css/post/postDetailNotlogin.css
@@ -39,12 +39,12 @@ form {
   font-size: 24px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
 }
 .post_info{
   display: flex;
   flex-direction: row;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
   border-bottom: 1px solid black;
 
 }
@@ -95,7 +95,7 @@ form {
   border: 1px solid black;
   border-radius: 15px;
   margin: 5px;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
 }
 .post_total_reply{
@@ -200,7 +200,7 @@ form {
 }
 
 #cancle {
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   border: 1px solid black;
 }
@@ -243,7 +243,7 @@ form {
 }
 
 #notcheck {
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   border: 1px solid black;
 }
