--- a/webapp/assets/css/post/postDetaillogin.css
+++ b/webapp/assets/css/post/postDetaillogin.css
@@ -26,12 +26,12 @@ form {
   font-size: 24px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
 }
 .post_info{
   display: flex;
   flex-direction: row;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
   border-bottom: 1px solid black;
 
 }
@@ -39,12 +39,12 @@ form {
   width: 150px;
   margin-left: 10px;
 }
-.post_member, .post_day, .post_view{
+.post_member, .post_day, .post_view, .post_modifyDay{
   display: flex;
   flex: 1;
   background-color: rgb(255, 255, 255);
 }
-.post_member div, .post_day div, .post_view div{
+.post_member div, .post_day div, .post_view div, .post_modifyDay div{
   margin-left: 10px;
 }
 
@@ -82,7 +82,7 @@ form {
   border: 1px solid black;
   border-radius: 15px;
   margin: 5px;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
 }
 .post_total_reply{
@@ -175,7 +175,7 @@ form {
 }
 
 #cancle {
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   border: 1px solid black;
 }
