--- a/webapp/assets/css/post/postModify.css
+++ b/webapp/assets/css/post/postModify.css
@@ -27,13 +27,13 @@ form {
   font-size: 24px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
 }
 
 .post_info {
   display: flex;
   flex-direction: row;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
   border-bottom: 1px solid black;
 
 }
@@ -94,7 +94,7 @@ input{
   height: 40px;
   margin-left: 20px;
   border: 1px solid black;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
 }
 
@@ -138,7 +138,7 @@ input{
   border: 1px solid black;
 }
 #cancle{
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
   border: 1px solid black;
 }
