--- a/webapp/assets/css/post/postWrite.css
+++ b/webapp/assets/css/post/postWrite.css
@@ -63,7 +63,7 @@ form {
   height: 40px;
   margin-left: 20px;
   border: 1px solid black;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
 }
 
@@ -102,7 +102,7 @@ form {
 }
 #cancle{
   border: 1px solid black;
-  background-color: blue;
+  background-color: #2F52AA;
   color: white;
 }
 
