--- a/webapp/assets/css/map/map.css
+++ b/webapp/assets/css/map/map.css
@@ -44,7 +44,7 @@ main{
   display: none; /*평소에는 none이다가 활성화 되면 flex로 변경*/
   flex-direction: column;
   background-color: #FFF8EF;
-  margin: auto 40px;
+  margin: 10px 40px;
 }
 
 /* 닫기 버튼 */
@@ -60,13 +60,13 @@ main{
 /* 지도 정보, 지도 상세 설명 */
 .map_info, .map_detail{
   background-color: white;
-  margin: 20px 30px 20px;
+  margin: 10px 30px 10px;
 }
 
 /* 지도 정보 */
 .map_info{
   width: 200px;
-  height: 200px;
+  height: 270px;
   justify-content: flex-end;
 }
 /* 지도 상세 설명 */
@@ -99,8 +99,38 @@ main{
   height: 300px;
 }
 
+.modalbox_complet{
+  display: none;
+  background-color: rgba(217, 217, 217, 0.7);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  top: 0;
+  left: 0;
+}
+
+.complet_modal{
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  border-radius: 20px;
+  width: 400px;
+  height: 300px;
+}
+
 /* 모달 닫기 버튼 */
 .modal_closebtn{
+  text-align: right;
+  font-size: 25px;
+  font-weight: bold;
+  top:10px;
+  right:10px;
+  cursor:pointer;
+}
+
+.modal_closebtn_complet{
   text-align: right;
   font-size: 25px;
   font-weight: bold;
@@ -117,14 +147,55 @@ main{
 }
 
 /* 찜 버튼 */
-.wishbtn{
-  width: 50px;
-  height: 25px;
-  margin: 0px auto;
+#wishbtn{
+  text-align: center;
   cursor: pointer;
+  font-size: 14px;
+}
+
+#wishbtn img{
+  width: 10%;
+  height: 10%;
 }
 
 /* 정보 내용 리스트 ul */
 .info_content{
   list-style-type: none;
+}
+
+/* 사이드바 내의 이미지 조절 */
+.info_content img{
+  width: 7%;
+  height: 7%;
+  margin-left: 10px;
+}
+
+.info_title{
+  font-size: 20px;
+  text-align: center;
+}
+
+.info_address{
+  font-size: 14px;
+}
+
+.info_times{
+  font-size: 14px;
+}
+
+.info_phonenum{
+  font-size: 14px;
+}
+
+.info_detail{
+  font-size: 14px;
+}
+
+.detail_title{
+  font-size: 20px;
+  text-align: center;
+}
+
+.map_detail{
+  font-size: 14px;
 }
