--- a/webapp/assets/css/news/news.css
+++ b/webapp/assets/css/news/news.css
@@ -104,14 +104,15 @@ main {
   padding: 0;
   position: absolute;
   left: 0;
-  overflow: hidden;
+  /* overflow: hidden; */
 }
 
 /* 카드 뉴스 */
 .card {
-  width: 800px;
+  width: 200px;
   height: 300px;
   background-color: #FFF8EF;
+  word-wrap: normal;
 }
 
 
