--- a/webapp/assets/css/news/newsSearch.css
+++ b/webapp/assets/css/news/newsSearch.css
@@ -50,6 +50,7 @@ main {
   background-color: #FFE7C9;
   border: 0px;
   border-bottom: 1px solid black;
+  font-size: 20px;
 }
 
 /* 검색 버튼 */
@@ -115,4 +116,9 @@ main {
 .card p {
   margin: 30px auto;
   text-align: center;
+  word-wrap: normal;
+}
+
+.cardtitle{
+  font-size: 20px;
 }
