--- a/webapp/assets/css/sign/terms.css
+++ b/webapp/assets/css/sign/terms.css
@@ -1,12 +1,13 @@
 main {
   width: 100%;
-  height: calc(100vh - 220px);
+  /* height: calc(100vh - 220px); */
   /* background-color: coral; */
 }
 
 .terms {
   /* border: 1px solid black; */
   width: 450px;
+  height: 100%;
   margin: 0 auto;
 }
 form {
@@ -16,7 +17,7 @@ form {
   gap: 24px;
 }
 
-.terms_title>p {
+.terms_title > p {
   font-size: 30px;
   text-align: center;
   margin: 20px 0;
@@ -25,7 +26,7 @@ form {
   display: -webkit-inline-box;
 }
 
-.terms_checkbox>label {
+.terms_checkbox > label {
   display: flex;
   gap: 12px;
 }
@@ -43,37 +44,36 @@ label {
 
 label > p {
   font-size: 20px;
-  
 }
 
 .all_p {
   font-weight: bolder;
 }
 
-#all+label > div,
-#check1+label > div,
-#check2+label > div,
-#check3+label > div {
+#all + label > div,
+#check1 + label > div,
+#check2 + label > div,
+#check3 + label > div {
   width: 20px;
   height: 20px;
   background-repeat: no-repeat;
-  background-image: url('./../../img/sign/unchecked.PNG');
+  background-image: url("./../../img/sign/unchecked.PNG");
   background-size: cover;
 }
 
-#all:checked+label > div,
-#check1:checked+label > div ,
-#check2:checked+label > div ,
-#check3:checked+label > div {
+#all:checked + label > div,
+#check1:checked + label > div,
+#check2:checked + label > div,
+#check3:checked + label > div {
   width: 20px;
   height: 20px;
   background-repeat: no-repeat;
-  background-image: url('./../../img/sign/checked.PNG');
+  background-image: url("./../../img/sign/checked.PNG");
   background-size: cover;
 }
 
-
-.terms_all, .term {
+.terms_all,
+.term {
   display: flex;
   flex-direction: column;
   gap: 12px;
@@ -82,11 +82,11 @@ label > p {
 
 .term > p {
   border: 1px solid black;
-  padding : 10px;
+  padding: 10px;
 }
 
 span {
-  color: #1D3266;
+  color: #1d3266;
   font-weight: bolder;
 }
 
@@ -99,6 +99,6 @@ span {
   padding: 10px 80px;
   border-radius: 30px;
   color: white;
-  background-color: #1D3266;
+  background-color: #1d3266;
   border: none;
 }
