--- a/webapp/assets/css/restaurant/restaurantDetail.css
+++ b/webapp/assets/css/restaurant/restaurantDetail.css
@@ -17,6 +17,7 @@
 }
 main{
   background-color: #FFE7C9;
+  width: 100%;
   height: calc(100vh - 220px);
   display: flex;
   justify-content: center;
@@ -24,31 +25,57 @@ main{
 .main_body{
   width: 1200px;
   height: 100%;
+  /* background-color: rgba(104, 104, 104, 0.1); */
+  position: relative;
+  display: flex;
+  flex-direction: column;
 }
 #page_title{
   margin-top: 40px;
   /* background-color: yellowgreen; */
   font-size: 30px;
 }
+#short_info{
+  position: absolute;
+  background-color: white;
+  left: 57.5%;
+  top:75%;
+  padding: 20px 40px;
+  border-radius: 15px;
+  display: flex;
+  justify-content: center;
+  border: solid 1px gray;
+}
+#short_info div{
+  margin: 0 20px;
+  /* background-color: red; */
+}
+#short_info p{
+  margin: 1px 0;
+  white-space: nowrap;
+}
 .context{
   margin-top: 40px;
   /* background-color: gray; */
   display: flex;
-  height: 510px;
+  flex: 1;
   width: 1200px;
+  margin-bottom: 40px;
+  /* background-color: black; */
 }
 .detail_info_area{
   /* background-color: yellow; */
-  width: 50%;
+  width: 45%;
   display: flex;
   flex-direction: column;
+  /* background-color: midnightblue; */
+  margin-left: 60px;
 }
 .restaurant_img_box{
-  width: 80%;
-  height: 60%;
+  width: 480px;
+  height: 270px;
   overflow: hidden;
-  border: solid 3px black;
-  border-radius: 20px;
+  border: solid 1px gray;
 }
 #restaurant_img{
   width: 100%;
@@ -61,32 +88,43 @@ main{
   flex-direction: column;
   flex:1;
 }
-.short_info{
+.restaurant_information{
   /* background-color: aqua; */
   flex: 1;
-  margin: 0 10px; 
+  margin: 10px 10px; 
+}
+#short_name, #short_branch{
+  display: inline-block;
+  margin-left: 3px;
+}
+.restaurant_information p{
+  margin-top: 10px;
 }
 .restaurant_introduction{
   /* background-color: gray; */
   background-color: #EFEFEF;
-  width: 100%;
+  width: 480px;
   overflow: hidden;
-  border: solid 3px black;
-  border-radius: 20px;
+  border: solid 1px black;
+  border-radius: 10px;
   display: flex;
+  padding: 5px;
 }
 #introduction{
   margin: 10px 20px;
 }
 .detail_map_area{
   /* background-color: aquamarine; */
-  width: 50%;
+  width: 45%;
+  height: 70%;
+  /* margin-right: 80px; */
 }
 .map_img_box{
   height: 100%;
   overflow: hidden;
-  border: solid 3px black;
+  /* border: solid 3px black; */
   border-radius: 20px;
+  box-shadow: 0 0 5px;
 }
 .map_img{
   height: 100%;
