--- a/webapp/assets/css/restaurant/restaurant.css
+++ b/webapp/assets/css/restaurant/restaurant.css
@@ -1,40 +1,41 @@
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    /* font-weight: 500; 적용 안됨 */
-    font-style: normal;
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  /* font-weight: 500; 적용 안됨 */
+  font-style: normal;
 }
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
   text-decoration-line: none;
   list-style-type: none;
   color: black;
-  font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
   /* #FFE7C9 */
   /* #1D3266 */
 }
 /* 메인 */
-main{
-  background-color: #FFE7C9;
-  height: calc(100vh - 220px);
+main {
+  background-color: #ffe7c9;
+  /* height: calc(100vh - 220px); */
   display: flex;
   justify-content: center;
 }
 /* 메인 바디 */
-.main_body{
+.main_body {
   width: 1200px;
   height: 100%;
 }
 /* 페이지 타이틀 */
-.page_title{
+.page_title {
   margin-top: 40px;
   /* background-color: yellowgreen; */
   font-size: 30px;
 }
 /* 페이지 내용 */
-.context{
+.context {
   margin-top: 60px;
   /* background-color: gray; */
   display: flex;
@@ -42,13 +43,13 @@ main{
   width: 100%;
 }
 /* 지역 선택 박스 */
-.region_select{
+.region_select {
   width: 260px;
   /* background-color: olive; */
   display: flex;
 }
 /* 지역 버튼 리스트 */
-.region_list{
+.region_list {
   /* background-color: aquamarine; */
   width: 120px;
   height: 100%;
@@ -57,7 +58,7 @@ main{
   justify-content: space-around;
 }
 /* 지역 버튼 */
-.region_button{
+.region_button {
   border-radius: 20px;
   background-color: white;
   text-align: center;
@@ -68,9 +69,9 @@ main{
   border: solid 3px black;
 }
 /* 선택된 지역을 가리키는 삼각형 */
-.region_mark{
+.region_mark {
   position: absolute;
-  top:12%;
+  top: 12%;
   right: -27px;
   width: 0;
   height: 0;
@@ -81,8 +82,8 @@ main{
   display: none;
 }
 /* 동 버튼 영역 */
-.region_small{
-  background-color:white;
+.region_small {
+  background-color: white;
   border: solid 3px black;
   width: 140px;
   border-radius: 30px;
@@ -91,7 +92,7 @@ main{
   display: none;
 }
 /* 동 버튼 리스트 */
-.region_small ul{
+.region_small ul {
   /* background-color: aqua; */
   border-radius: 20px;
   display: flex;
@@ -100,8 +101,8 @@ main{
   height: 100%;
 }
 /* 동 버튼 */
-.region_small ul li{
-  background-color:white;
+.region_small ul li {
+  background-color: white;
   border: solid 2px black;
   border-radius: 15px;
   width: 70%;
@@ -112,7 +113,7 @@ main{
   font-size: 16px;
 }
 /* 음식점 선택 영역 */
-.restaurant_select{
+.restaurant_select {
   /* background-color: orange; */
   flex: 1;
   height: 100%;
@@ -123,21 +124,21 @@ main{
   flex-direction: column;
 }
 /* 음식점 카드 영역 */
-.restaurant_board{
+.restaurant_board {
   /* background-color: blueviolet; */
   width: 93%;
   height: 80%;
 }
 /* 음식점 카드 줄 */
-.restaurant_row{
+.restaurant_row {
   display: flex;
   /* border: solid 1px black; */
   /* background-color: gray; */
   height: 50%;
 }
 /* 음식점 카드 */
-.restaurant_card{
-  background-color: #FFF8EF;
+.restaurant_card {
+  background-color: #fff8ef;
   opacity: 0;
   flex: 1;
   margin: 5px;
@@ -149,37 +150,37 @@ main{
   border: solid 3px black;
 }
 /* 음식점 카드 소개 영역 */
-.restaurant_introduce{
+.restaurant_introduce {
   /* background-color: darkslategrey; */
   flex: 1;
   display: flex;
 }
 /* 음식점 정보 */
-.restaurant_info{
+.restaurant_info {
   /* background-color: skyblue; */
   width: 60%;
   padding: 10px;
   font-size: 16px;
 }
 /* 음식점 소개 */
-.restaurant_info div{
+.restaurant_info div {
   margin-top: 2px;
 }
 /* 음식점 이름 */
-.restaurant_name{
-  background-color:wheat;
+.restaurant_name {
+  background-color: wheat;
   text-align: center;
   height: 30px;
   width: 60%;
   margin: 10px 0 10px 20px;
   line-height: 30px;
-  color:#1D3266;
-  border: solid 3px #1D3266;
+  color: #1d3266;
+  border: solid 3px #1d3266;
   border-radius: 10px;
   font-size: 20px;
 }
 /* 찜하기 부분 */
-.restaurant_mark{
+.restaurant_mark {
   /* background-color: pink; */
   width: 40%;
   display: flex;
@@ -188,22 +189,22 @@ main{
   /* justify-content: center; */
 }
 /* 별 아이콘 */
-.restaurant_mark div{
+.restaurant_mark div {
   margin-top: 7px;
 }
 /*  */
-.star_img_box{
+.star_img_box {
   height: 40px;
   width: 42px;
   overflow: hidden;
   position: relative;
 }
-.star_img{
+.star_img {
   /* left: -100%; */
   height: 100%;
   /* background-color: aqua; */
   position: absolute;
 }
-.restaurant_pagenation{
+.restaurant_pagenation {
   margin-top: 20px;
-} 
+}
