--- a/webapp/assets/css/careMember/careMemberDetail.css
+++ b/webapp/assets/css/careMember/careMemberDetail.css
@@ -1,31 +1,33 @@
 /* 폰트 */
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    /* font-weight: 500; 적용 안됨 */
-    font-style: normal;
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  /* font-weight: 500; 적용 안됨 */
+  font-style: normal;
 }
 /* 전체 내용 */
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
   text-decoration-line: none;
   list-style-type: none;
   color: black;
-  font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
   /* #FFE7C9 */
   /* #1D3266 */
 }
 /* 메인 세션 */
-main{
-  background-color: #FFE7C9;
-  height: calc(100vh - 220px);
+main {
+  background-color: #ffe7c9;
+  /* height: calc(100vh - 220px); */
+  height: 100%;
   display: flex;
   justify-content: center;
 }
 /* 페이지 컨테이너 */
-.main_body{
+.main_body {
   width: 1100px;
   height: 100%;
   background-color: rgba(104, 104, 104, 0.1);
@@ -34,7 +36,7 @@ main{
   overflow: hidden;
 }
 /* 페이지 내용 칸 */
-.context{
+.context {
   /* overflow: hidden; */
   margin-top: 70px;
   /* background-color: orange; */
@@ -43,17 +45,17 @@ main{
   display: flex;
 }
 /* 프로필 영역 */
-.profile_area{
+.profile_area {
   /* background-color: pink; */
   width: 300px;
 }
 /* 프로필 박스 */
-.profile{
+.profile {
   /* background-color: red; */
   display: flex;
 }
 /* 프로필 픽 박스 */
-.profile_pic_box{
+.profile_pic_box {
   width: 100%;
   background-color: white;
   border-radius: 10px;
@@ -62,7 +64,7 @@ main{
   height: 600px;
   align-items: center;
 }
-.profile_pic_frame{
+.profile_pic_frame {
   margin-top: 30px;
   width: 200px;
   height: 200px;
@@ -72,11 +74,11 @@ main{
   box-shadow: 0 0 10px;
 }
 /* 프로필 사진 */
-.profile_pic{
+.profile_pic {
   width: 100%;
 }
 /* 프로필 정보 */
-.profile_intro{
+.profile_intro {
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -84,7 +86,7 @@ main{
   /* background-color: #1D3266; */
 }
 /* 프로필 이름 */
-.profile_name{
+.profile_name {
   background-color: wheat;
   width: max-content;
   font-size: 24px;
@@ -94,7 +96,7 @@ main{
   margin: 20px 10px 0 10px;
 }
 /* 프로필 날짜 */
-.profile_day_row{
+.profile_day_row {
   /* background-color: crimson; */
   display: flex;
   padding-left: 2px;
@@ -104,8 +106,8 @@ main{
   margin-top: 10px;
 }
 /* 날짜 */
-.day{
-  border: solid 3px #1D3266;
+.day {
+  border: solid 3px #1d3266;
   border-radius: 50%;
   width: 24px;
   height: 24px;
@@ -116,34 +118,34 @@ main{
   background-color: wheat;
 }
 /* 프로필 이력 */
-.profile_info{
+.profile_info {
   margin-top: 15px;
   /* background-color: gray; */
   width: 85%;
   font-size: 16px;
 }
 /* 프로필 이력 ul */
-.profile_info ul{
+.profile_info ul {
   /* background-color: rebeccapurple; */
 }
 /* 프로필 이력 li */
-.profile_info ul li{
+.profile_info ul li {
   padding: 5px 10px;
   /* background-color:crimson; */
 }
 /* 프로필 소개 */
-.profile_short_intro{
+.profile_short_intro {
   margin-top: 10px;
   /* background-color: yellow; */
   width: 85%;
 }
 /* 프로필 소개 내용 */
-.profile_short_intro div{
+.profile_short_intro div {
   padding: 5px 10px;
   /* background-color: green; */
 }
 /* 쪽지 보내기 박스 */
-#send_button_box{
+#send_button_box {
   display: flex;
   flex: 1;
   /* background-color: black; */
@@ -151,16 +153,16 @@ main{
   align-items: baseline;
 }
 /* 쪽지 보내기 버튼 */
-#send_button{
+#send_button {
   margin-top: 30px;
   height: 40px;
   width: 150px;
   border-radius: 10px;
   color: white;
-  background-color: #1D3266;
+  background-color: #1d3266;
 }
 /* 후기 영역 */
-.comments_area{
+.comments_area {
   /* background-color: yellowgreen; */
   width: 550px;
   font-size: 16px;
@@ -171,12 +173,12 @@ main{
   flex: 1;
 }
 /* 후기 패널 박스 */
-.comment_pannel{
+.comment_pannel {
   /* background-color: #1D3266; */
   width: 100%;
 }
 /* 후기 분류 제목 */
-.comment_column{
+.comment_column {
   background-color: rgb(211, 211, 211);
   display: flex;
   height: 30px;
@@ -185,13 +187,13 @@ main{
   align-items: center;
 }
 /* 후기 리스트 */
-.comment_list{
+.comment_list {
   /* background-color: yellow; */
   /* background-color: blue; */
   height: 562px;
 }
 /* 후기 리스트 div */
-.comment_div{
+.comment_div {
   display: flex;
   height: 30px;
   border-bottom: solid 1px black;
@@ -202,7 +204,7 @@ main{
 }
 /* 후기 순번 분류, 순번 */
 .comment_number_column,
-.comment_number{
+.comment_number {
   /* background-color: red; */
   width: 5%;
   text-align: center;
@@ -210,14 +212,14 @@ main{
 
 /* 후기 작성자 분류, 작성자 */
 .comment_author_column,
-.comment_author{
+.comment_author {
   /* background-color: orange; */
   width: 14%;
   text-align: center;
 }
 
 /* 후기 작성자 분류 */
-.comment_author_column{
+.comment_author_column {
   border-left: solid 1px black;
   border-right: solid 1px black;
 }
@@ -225,62 +227,62 @@ main{
 /* 후기 내용 분류, 내용 */
 .comment_context_column,
 .comment_context,
-.comment_context_input{
+.comment_context_input {
   /* background-color: green; */
   flex: 1;
   text-align: center;
 }
 /* 후기 내용 분류 */
-.comment_context_column{
+.comment_context_column {
   border-right: solid 1px black;
 }
 /* 후기 내용 */
 .comment_context,
-.comment_context_input{
+.comment_context_input {
   padding-left: 20px;
   text-align: left;
   /* background-color: mediumaquamarine; */
 }
-.comment_context_input{
+.comment_context_input {
   margin-right: 7px;
   height: 80%;
-  background-color:rgb(241, 241, 241);
+  background-color: rgb(241, 241, 241);
   border-radius: 5px;
 }
 
 /* 후기 수정버튼 */
-.comment_edit{
+.comment_edit {
   margin: 0 2px;
-  border: solid 2px #1D3266;
+  border: solid 2px #1d3266;
 }
-.comment_edit button{
+.comment_edit button {
   background-color: gray;
   padding: 2px;
-  cursor:pointer;
+  cursor: pointer;
   color: white;
 }
 /* 후기 삭제버튼 */
-.comment_del{
+.comment_del {
   margin: 0 2px;
-  border: solid 2px #1D3266;
+  border: solid 2px #1d3266;
 }
-.comment_del button{
+.comment_del button {
   background-color: red;
   padding: 2px;
-  cursor:pointer;
+  cursor: pointer;
   color: white;
 }
 
 /* 후기 날짜 분류, 날짜 */
 .comment_date_column,
-.comment_date{
+.comment_date {
   /* background-color: blue; */
   width: 15%;
   text-align: center;
 }
 
 /* 후기 작성 박스 */
-.input_box{
+.input_box {
   margin-top: 10px;
   /* background-color: yellow; */
   display: flex;
@@ -290,13 +292,13 @@ main{
   background-color: aquainput_box;
 }
 /* 후기 입력 창 */
-#comment_text{
+#comment_text {
   height: 30px;
   margin-left: 10px;
   flex: 1;
 }
 /* 후기 작성 버튼 */
-#comment_button{
+#comment_button {
   border: solid 1px black;
   height: 20px;
   width: 40px;
@@ -304,7 +306,7 @@ main{
   margin: 0 10px;
 }
 /* 후기 페이지 네이션 */
-#comment_pagenation{
+#comment_pagenation {
   margin-top: 15px;
   /* background-color: blue; */
   text-align: center;
