--- a/webapp/assets/css/myPageCare/careMessage.css
+++ b/webapp/assets/css/myPageCare/careMessage.css
@@ -3,14 +3,15 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
+  font-family: "pretendard-regular";
 }
 
 /* 폰트 공통 설정 */
 
 @font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -70,7 +71,6 @@ main {
   cursor: pointer;
   color: #ffffff;
 }
-
 
 /*****************/
 /* 메인내용 */
@@ -227,7 +227,7 @@ main {
   width: 420px;
   background: #fff;
   border-radius: 14px;
-  box-shadow: 0 20px 60px rgba(0, 0, 0, .25);
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
   overflow: hidden;
 }
 /* 모달 제목  */
@@ -301,8 +301,8 @@ main {
   color: #fff;
 }
 /* 삭제 버튼 */
-.btn_delete {
-  background: #fff;
+.modal_button > .btn_delete {
+  background-color: #fff;
   color: #ff0400;
   border: 2px solid #ff0400;
 }
