--- a/webapp/assets/css/myPageCare/careMessageReturn.css
+++ b/webapp/assets/css/myPageCare/careMessageReturn.css
@@ -3,14 +3,15 @@
 * {
   margin: 0;
   padding: 0;
-  font-family: 'pretendard-regular';
+  font-family: "pretendard-regular";
 }
 
 /* 폰트 공통 설정 */
 
 @font-face {
-  font-family: 'Pretendard-Regular';
-  src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
   font-weight: 400;
   font-style: normal;
 }
@@ -70,8 +71,6 @@ main {
   cursor: pointer;
   color: #ffffff;
 }
-
-
 
 /*****************/
 /* 전체영역 스타일 */
@@ -206,7 +205,6 @@ main {
   font-weight: 700;
 }
 
-
 /* 모달 배경 */
 .modal_bg {
   display: none;
@@ -215,7 +213,7 @@ main {
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0,0,0,0.45);
+  background: rgba(0, 0, 0, 0.45);
   z-index: 1000;
   justify-content: center;
   align-items: center;
@@ -229,7 +227,7 @@ main {
   width: 420px;
   background: #fff;
   border-radius: 14px;
-  box-shadow: 0 20px 60px rgba(0, 0, 0, .25);
+  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.25);
   overflow: hidden;
 }
 /* 쪽지 읽기 모달 */
@@ -287,7 +285,7 @@ main {
   cursor: pointer;
 }
 /* 삭제 버튼 */
-.btn_delete {
+.modal_button > .btn_delete {
   background: #fff;
   color: #ff0400;
   border: 2px solid #ff0400;
