--- a/webapp/assets/css/post/postDetaillogin.css
+++ b/webapp/assets/css/post/postDetaillogin.css
@@ -5,7 +5,7 @@
 
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  /* height: calc(100vh - 200px); */
   display: flex;
   flex-direction: column;
 }
@@ -18,49 +18,54 @@ form {
   display: flex;
   flex-direction: column;
 }
-.post_title{
+.post_title {
   display: flex;
   flex-direction: column;
 }
-.post_name{
+.post_name {
   font-size: 24px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
 }
-.post_info{
+.post_info {
   display: flex;
   flex-direction: row;
-  background-color: #F2F2F2;
+  background-color: #f2f2f2;
   border-bottom: 1px solid black;
-
 }
-.post_info li{
+.post_info li {
   width: 150px;
   margin-left: 10px;
 }
-.post_member, .post_day, .post_view, .post_modifyDay{
+.post_member,
+.post_day,
+.post_view,
+.post_modifyDay {
   display: flex;
   flex: 1;
   background-color: rgb(255, 255, 255);
 }
-.post_member div, .post_day div, .post_view div, .post_modifyDay div{
+.post_member div,
+.post_day div,
+.post_view div,
+.post_modifyDay div {
   margin-left: 10px;
 }
 
-.post_content{
+.post_content {
   margin-top: 10px;
 }
 
-.post_content ul li div{
+.post_content ul li div {
   border: 1px solid black;
   height: 30vh;
 }
-.button{
+.button {
   display: flex;
   justify-content: end;
 }
-.button_list{
+.button_list {
   width: 100px;
   height: 30px;
   border: 1px solid black;
@@ -82,10 +87,10 @@ form {
   border: 1px solid black;
   border-radius: 15px;
   margin: 5px;
-  background-color: #2F52AA;
+  background-color: #2f52aa;
   color: white;
 }
-.post_total_reply{
+.post_total_reply {
   padding-left: 30px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
@@ -93,35 +98,35 @@ form {
   display: flex;
   align-items: center;
 }
-.post_reply{
+.post_reply {
   border-bottom: 1px solid black;
 }
-.post_reply ul{
+.post_reply ul {
   display: flex;
   justify-content: space-between;
   padding: 0px 30px;
   height: 30px;
   align-items: center;
 }
-.reply_content{
+.reply_content {
   border-top: 1px dotted black;
 }
 
-.reply_write{
+.reply_write {
   border-bottom: 1px solid black;
   border-right: 1px solid black;
   border-left: 1px solid black;
   margin-top: 10px;
 }
 
-.reply_write ul li{
+.reply_write ul li {
   border-top: 1px solid black;
   height: 30px;
   display: flex;
   padding-left: 30px;
   align-items: center;
 }
-.reply_write ul li input{
+.reply_write ul li input {
   flex: 1;
   height: 30px;
   font-size: 20px;
@@ -130,11 +135,11 @@ form {
   height: 30px;
   width: 100px;
   border-left: 1px solid black;
-} 
+}
 
 .checkmodal {
   display: none;
-  position: fixed; 
+  position: fixed;
   top: 0;
   width: 900px;
   height: 400px;
@@ -175,7 +180,7 @@ form {
 }
 
 #cancle {
-  background-color: #2F52AA;
+  background-color: #2f52aa;
   color: white;
   border: 1px solid black;
 }
