--- a/webapp/assets/css/restaurant/restaurantDetail.css
+++ b/webapp/assets/css/restaurant/restaurantDetail.css
@@ -1,28 +1,29 @@
 @font-face {
-    font-family: 'Pretendard-Regular';
-    src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
-    /* font-weight: 500; 적용 안됨 */
-    font-style: normal;
+  font-family: "Pretendard-Regular";
+  src: url("https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff")
+    format("woff");
+  /* font-weight: 500; 적용 안됨 */
+  font-style: normal;
 }
-*{
+* {
   margin: 0;
   padding: 0;
   border: 0;
   text-decoration-line: none;
   list-style-type: none;
   color: black;
-  font-family: 'Pretendard-Regular';
+  font-family: "Pretendard-Regular";
   /* #FFE7C9 */
   /* #1D3266 */
 }
-main{
-  background-color: #FFE7C9;
+main {
+  background-color: #ffe7c9;
   width: 100%;
-  height: calc(100vh - 220px);
+  /* height: calc(100vh - 220px); */
   display: flex;
   justify-content: center;
 }
-.main_body{
+.main_body {
   width: 1200px;
   height: 100%;
   /* background-color: rgba(104, 104, 104, 0.1); */
@@ -30,31 +31,31 @@ main{
   display: flex;
   flex-direction: column;
 }
-#page_title{
+#page_title {
   margin-top: 40px;
   /* background-color: yellowgreen; */
   font-size: 30px;
 }
-#short_info{
+#short_info {
   position: absolute;
   background-color: white;
   left: 57.5%;
-  top:75%;
+  top: 75%;
   padding: 20px 40px;
   border-radius: 15px;
   display: flex;
   justify-content: center;
   border: solid 1px gray;
 }
-#short_info div{
+#short_info div {
   margin: 0 20px;
   /* background-color: red; */
 }
-#short_info p{
+#short_info p {
   margin: 1px 0;
   white-space: nowrap;
 }
-.context{
+.context {
   margin-top: 40px;
   /* background-color: gray; */
   display: flex;
@@ -63,7 +64,7 @@ main{
   margin-bottom: 40px;
   /* background-color: black; */
 }
-.detail_info_area{
+.detail_info_area {
   /* background-color: yellow; */
   width: 45%;
   display: flex;
@@ -71,38 +72,39 @@ main{
   /* background-color: midnightblue; */
   margin-left: 60px;
 }
-.restaurant_img_box{
+.restaurant_img_box {
   width: 480px;
   height: 270px;
   overflow: hidden;
   border: solid 1px gray;
 }
-#restaurant_img{
+#restaurant_img {
   width: 100%;
   height: 100%;
 }
-.restaurant_info{
+.restaurant_info {
   /* background-color: blueviolet; */
   width: 80%;
   display: flex;
   flex-direction: column;
-  flex:1;
+  flex: 1;
 }
-.restaurant_information{
+.restaurant_information {
   /* background-color: aqua; */
   flex: 1;
-  margin: 10px 10px; 
+  margin: 10px 10px;
 }
-#short_name, #short_branch{
+#short_name,
+#short_branch {
   display: inline-block;
   margin-left: 3px;
 }
-.restaurant_information p{
+.restaurant_information p {
   margin-top: 10px;
 }
-.restaurant_introduction{
+.restaurant_introduction {
   /* background-color: gray; */
-  background-color: #EFEFEF;
+  background-color: #efefef;
   width: 480px;
   overflow: hidden;
   border: solid 1px black;
@@ -110,22 +112,22 @@ main{
   display: flex;
   padding: 5px;
 }
-#introduction{
+#introduction {
   margin: 10px 20px;
 }
-.detail_map_area{
+.detail_map_area {
   /* background-color: aquamarine; */
   width: 45%;
   height: 70%;
   /* margin-right: 80px; */
 }
-.map_img_box{
+.map_img_box {
   height: 100%;
   overflow: hidden;
   /* border: solid 3px black; */
   border-radius: 20px;
   box-shadow: 0 0 5px;
 }
-.map_img{
+.map_img {
   height: 100%;
-} 
+}
