--- a/webapp/assets/css/myPageNormal/normalPwCheck.css
+++ b/webapp/assets/css/myPageNormal/normalPwCheck.css
@@ -2,25 +2,28 @@
   margin: 0;
   padding: 0;
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
+  /* width: 100%; */
   display: flex;
+  min-height: calc(100vh - 220px);
+  /* height: 100vh; */
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
+  /* height: 100%; */
   background-color: #2F52AA;
   color: #fff;
-  display: flex;
-  flex-direction: column;
+  /* display: flex; */
+  /* flex-direction: column; */
 }
 
 .main_sidebar ul li img {
@@ -33,9 +36,11 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
+
 .main_sidebar ul li a {
   color: white;
 }
+
 /* ============================= */
 
 .pw_check{
