--- a/webapp/assets/css/post/postWrite.css
+++ b/webapp/assets/css/post/postWrite.css
@@ -5,7 +5,7 @@
 
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
   display: flex;
 }
 
@@ -67,7 +67,7 @@ form {
   color: white;
 }
 
-.notmodal {
+.writecheckmodal {
   display: none;
   position: fixed;
   top: 0;
@@ -96,14 +96,54 @@ form {
   justify-content: center;
   gap: 20px;
 }
-#check{
-  border: 1px solid black;
-  background-color: white;
+
+.modal_buttons button {
+  padding: 8px 20px;
+  cursor: pointer;
+  border-radius: 15px;
 }
-#cancle{
-  border: 1px solid black;
+
+#writecheck {
   background-color: #2F52AA;
   color: white;
+  border: 1px solid black;
+}
+
+#writecancel {
+  background-color: red;
+  color: white;
+  border: 1px solid black;
+}
+
+
+.writemodal {
+  display: none;
+  position: fixed;
+  top: 0;
+  width: 900px;
+  height: 400px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  z-index: 10px;
+  margin-left: 30%;
+}
+
+.modal_box {
+  background-color: rgb(255, 255, 255);
+  border: 1px solid black;
+  text-align: center;
+  padding: 30px;
+  border-radius: 30px;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal_buttons {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .modal_buttons button {
@@ -111,6 +151,9 @@ form {
   cursor: pointer;
   border-radius: 15px;
 }
-.button_write a{
+
+#reportcheck {
+  background-color: #2F52AA;
   color: white;
+  border: 1px solid black;
 }
