--- a/webapp/assets/css/myPageNormal/normalModify.css
+++ b/webapp/assets/css/myPageNormal/normalModify.css
@@ -10,13 +10,14 @@
 }
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  /* height: calc(100vh - 200px); */
+  /* height: 100vh; */
   display: flex;
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
+  /* height: 100%; */
   background-color: #2F52AA;
   color: #fff;
   display: flex;
@@ -58,6 +59,7 @@ form{
   border-radius: 15px;
   border: 1px solid black;
   height: 100px;
+  width: 90%;
 }
 .arlim div{
   width: 20px;
