--- a/webapp/assets/css/myPageNormal/normalPost.css
+++ b/webapp/assets/css/myPageNormal/normalPost.css
@@ -2,21 +2,24 @@
   margin: 0;
   padding: 0;
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  /* height: calc(100vh - 200px); */
+  /* height: 100vh; */
   display: flex;
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
+  /* height: 100%; */
   background-color: #2F52AA;
   color: #fff;
   display: flex;
@@ -33,9 +36,11 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
+
 .main_sidebar ul li a {
   color: white;
 }
+
 /* ============================= */
 .div_mark {
   flex: 1;
@@ -83,20 +88,20 @@ form {
 
 .name_col div,
 .name div {
-  width: 100px;
+  width: 10vw;
   text-align: center;
 }
 
 .location_col div,
 .location div {
-  width: 1000px;
+  width: 30vw;
   text-align: center;
   background-color: #F2F2F2;
 }
 
 .phone_col div,
 .phone div {
-  width: 200px;
+  width: 20vw;
   text-align: center;
 }
 
