--- a/webapp/assets/css/myPageNormal/normalReference.css
+++ b/webapp/assets/css/myPageNormal/normalReference.css
@@ -2,21 +2,24 @@
   margin: 0;
   padding: 0;
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
+  /* width: 100%; */
+  /* height: calc(100vh - 200px); */
+  height: 80vh;
   display: flex;
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
+  /* height: 100%; */
   background-color: #2F52AA;
   color: #fff;
   display: flex;
@@ -33,12 +36,15 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
+
 .main_sidebar ul li a {
   color: white;
 }
+
 /* ============================= */
 .div_mark {
-  flex: 1;
+  /* flex: 1; */
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -77,7 +83,9 @@ form {
 }
 
 .mark_nav ul {
+  width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 .mark_nav ul li {
@@ -102,12 +110,14 @@ form {
 }
 
 .mark_list ul {
+  width: 100%;
   display: flex;
+  justify-content: space-between;
 }
 
 .mark_list ul li {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
 }
 
@@ -118,21 +128,21 @@ form {
 }
 
 .name div {
-  width: 200px;
+  width: 10vw;
   text-align: center;
 }
 
 .referencetitle div {
-  width: 800px;
+  width: 30vw;
   text-align: center;
 }
 
 .day div {
-  width: 200px;
+  width: 10vw;
   text-align: center;
 }
 .check div {
-  width: 200px;
+  width: 10vw;
   text-align: center;
 }
 
