--- a/webapp/assets/css/myPageNormal/normalReferenceDetail.css
+++ b/webapp/assets/css/myPageNormal/normalReferenceDetail.css
@@ -2,22 +2,25 @@
   margin: 0;
   padding: 0;
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  /* height: calc(100vh - 200px); */
+  height: 100vh;
   display: flex;
 }
 
 .main_sidebar {
   width: 180px;
   height: 100%;
-  background-color: #2f4db1;
+  background-color: #2F52AA;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -33,9 +36,11 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
+
 .main_sidebar ul li a {
   color: white;
 }
+
 /* ============================= */
 
 
