--- a/webapp/assets/css/myPageNormal/normalheart.css
+++ b/webapp/assets/css/myPageNormal/normalheart.css
@@ -2,15 +2,18 @@
   margin: 0;
   padding: 0;
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  /* height: calc(100vh - 200px); */
+  height: 100vh;
   display: flex;
 }
 
@@ -33,8 +36,9 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
-.main_sidebar ul li a{
-    color: white;
+
+.main_sidebar ul li a {
+  color: white;
 }
 
 /* ============================= */
