--- a/webapp/assets/css/myPageNormal/normalsendMesseage.css
+++ b/webapp/assets/css/myPageNormal/normalsendMesseage.css
@@ -2,22 +2,25 @@
   margin: 0;
   padding: 0;
 }
+
 @font-face {
   font-family: 'Pretendard-Regular';
   src: url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
+
 main {
-  width: 100%;
-  height: calc(100vh - 200px);
+  /* width: 100%; */
+  min-height: calc(100vh - 200px);
+  /* height: 100vh; */
   display: flex;
 }
 
 .main_sidebar {
   width: 180px;
-  height: 100%;
-  background-color: #2f4db1;
+  /* height: 100%; */
+  background-color: #2F52AA;
   color: #fff;
   display: flex;
   flex-direction: column;
@@ -33,12 +36,15 @@ main {
 .main_sidebar ul li {
   padding: 12px 20px;
 }
+
 .main_sidebar ul li a {
   color: white;
 }
+
 /* ============================= */
 .div_mark {
-  flex: 1;
+  /* flex: 1; */
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
@@ -58,6 +64,7 @@ form {
 
 .mark_nav {
   display: flex;
+  /* width: 100%; */
   margin: 0px 150px 0px 150px;
   height: 50px;
   align-items: center;
@@ -69,7 +76,7 @@ form {
 .mark_nav ul {
   width: 100%;
   display: flex;
-  justify-content: space-between
+  justify-content: space-between;
 }
 
 .mark_nav ul li {
@@ -87,25 +94,25 @@ form {
 
 .name_col div,
 .name div {
-  width: 100px;
+  width: 10vw;
   text-align: center;
 }
 
 .location_col div,
 .location div {
-  width: 700px;
+  width: 20vw;
   text-align: center;
   background-color: #F2F2F2;
 }
 
 .phone_col div,
 .phone div {
-  width: 200px;
+  width: 10vw;
   text-align: center;
 }
 .read_col div,
 .read div {
-  width: 100px;
+  width: 10vw;
   text-align: center;
 }
 
@@ -133,7 +140,7 @@ form {
   background-color: rgb(255, 255, 255);
 }
 
-.checkbox_li {
+.mark_list input {
   margin: 0px 30px;
   width: 30px;
   height: 30px;
@@ -289,7 +296,7 @@ form {
 }
 
 /* 삭제 버튼 */
-.btn_delete {
+.modal_button > .btn_delete {
   background: #fff;
   color: #ff0400;
   border: 2px solid #ff0400;
