--- a/webapp/assets/css/post/postArlim.css
+++ b/webapp/assets/css/post/postArlim.css
@@ -5,7 +5,7 @@
 
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
   display: flex;
   flex-direction: column;
 }
@@ -29,13 +29,13 @@ form {
   font-size: 24px;
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
 }
 
 .post_info {
   display: flex;
   flex-direction: row;
-  background-color: rgb(155, 155, 155);
+  background-color: #F2F2F2;
   border-bottom: 1px solid black;
 
 }
