--- a/webapp/assets/css/post/postDetaillogin.css
+++ b/webapp/assets/css/post/postDetaillogin.css
@@ -5,7 +5,7 @@
 
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
   display: flex;
   flex-direction: column;
 }
@@ -169,13 +169,13 @@ form {
 }
 
 #check {
-  background-color: white;
-  color: black;
+  background-color: #2F52AA;
+  color: white;
   border: 1px solid black;
 }
 
 #cancle {
-  background-color: #2F52AA;
+  background-color: red;
   color: white;
   border: 1px solid black;
 }
