--- a/webapp/assets/css/post/postModify.css
+++ b/webapp/assets/css/post/postModify.css
@@ -5,7 +5,7 @@
 
 main {
   width: 100%;
-  height: calc(100vh - 200px);
+  min-height: calc(100vh - 200px);
   display: flex;
 }
 
@@ -134,11 +134,12 @@ input{
   border-radius: 15px;
 }
 #check{
-  background-color: white;
-  border: 1px solid black;
-}
-#cancle{
   background-color: #2F52AA;
   color: white;
   border: 1px solid black;
+}
+#cancle{
+  background-color: red;
+  color: white;
+  border: 1px solid red;
 }
