250817 18:18 강버들 음식점 디테일 찜하기, 목록 버튼 + 돌봄회원 요일 체크박스 추가 + 돌봄회원 디테일 하트 추가

--- a/webapp/assets/css/careMember/careMemberDetail.css
+++ b/webapp/assets/css/careMember/careMemberDetail.css
@@ -20,9 +20,11 @@
 /* 메인 세션 */
 main{
   background-color: #FFE7C9;
-  height: calc(100vh - 220px);
+  /* height: calc(100vh - 220px); */
   display: flex;
+  height: 800px;
   justify-content: center;
+  min-width: 600px;
 }
 /* 페이지 컨테이너 */
 .main_body{
@@ -61,6 +63,21 @@ main{
   flex-direction: column;
   height: 600px;
   align-items: center;
+  position: relative;
+}
+/* 하트 이미지 박스 */
+#heart_img_box{
+  position: absolute;
+  height: 35px;
+  width: 35px;
+  overflow: hidden;
+  top: 10px;
+  right: 10px;
+}
+#heart_img{
+  position: absolute;
+  height: 100%;
+  right: 0%;
 }
 .profile_pic_frame{
   margin-top: 30px;
