--- a/webapp/assets/css/main.css
+++ b/webapp/assets/css/main.css
@@ -15,15 +15,21 @@
   /* #FFE7C9 */
   /* #1D3266 */
 }
+body{
+  background-color: #FFE7C9;
+}
 main{
   background-color: #FFE7C9;
   /* height: calc(100vh - 220px); */
   display: flex;
   justify-content: center;
+  min-width: 600px;
 }
 .main_body{
+  background-color: #FFE7C9;
   width: 1200px;
   height: 100%;
+  /* background-color: aqua; */
 }
 .news_banner{
   /* 이게 .slides-wrap임. */
@@ -87,7 +93,6 @@ main{
   /* opacity: 0.9; */
   padding: 20px;
   border-radius: 10px;
-  box-shadow: 0 0 5px;
 }
 .slide-img a:hover{
   color: yellow;
