--- a/webapp/assets/css/careMember/careMember.css
+++ b/webapp/assets/css/careMember/careMember.css
@@ -31,7 +31,7 @@ main{
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: rgba(104, 104, 104, 0.1);
+  /* background-color: rgba(104, 104, 104, 0.1); */
 }
 /* 페이지 제목 */
 .page_title{
@@ -64,6 +64,8 @@ main{
 #criteria{
   flex: 1;
   margin: 0 10px;
+  /* background-color: #1D3266; */
+  height: 100%;
 }
 /* 검색 아이콘 박스 */
 #search_icon_box{
@@ -73,6 +75,24 @@ main{
 /* 검색 버튼 이미지 */
 #search_icon{
   width: 100%;
+}
+#day_list{
+  margin-top: 7px;
+  /* background-color: #1D3266; */
+  width: 30%;
+  display: flex;
+  justify-content: space-between;
+}
+#day_list div{
+  width: 33px;
+  display: flex;
+  /* background-color: mediumspringgreen; */
+  justify-content: space-between;
+}
+#day_list div input{
+  width: 16px;
+  border-radius: 50%;
+  accent-color: #3154ad;
 }
 /* 카드 리스트 내용 */
 .context{
@@ -103,11 +123,12 @@ main{
   width: 230px;
   height: 330px;
   border-radius: 30px;
-  border: solid 3px black;
+  /* border: solid 2px black; */
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 /* 하트 이미지 박스 */
 .heart_img_box{
@@ -123,6 +144,8 @@ main{
   position: absolute;
   height: 100%;
   right: 0%;
+  /* 안 먹음 */
+  /* user-select: none; */
 }
 /* 프로필 */
 .profile{
@@ -138,7 +161,7 @@ main{
   height: 100px;
   overflow: hidden;
   border-radius: 50%;
-  border: solid 2px black;
+  /* border: solid 2px black; */
   margin-top: 45px;
 }
 /* 프로필 사진 */
