--- a/webapp/assets/css/header.css
+++ b/webapp/assets/css/header.css
@@ -4,6 +4,10 @@
   display: flex;
   flex-direction: column;
   width: 100%;
+  min-width: 600px;
+}
+#header_upper{
+  
 }
 #site_header div span a img,
 #site_header_login div span a img {
