250818 1243 황승우 css 수정

--- a/webapp/assets/css/login/login.css
+++ b/webapp/assets/css/login/login.css
@@ -32,7 +32,7 @@ footer {
 
 main {
   width: 100%;
-  height: calc(100vh - 220px);
+  /* height: calc(100vh - 220px); */
   /* background-color: coral; */
 }
 input {
