--- a/webapp/assets/css/sign/terms.css
+++ b/webapp/assets/css/sign/terms.css
@@ -2,6 +2,7 @@ main {
   width: 100%;
   /* height: calc(100vh - 220px); */
   /* background-color: coral; */
+  margin-bottom: 30px;
 }
 
 .terms {
