250818 11:57 김태현 map페이지 설명 추가, 뉴스 수정 도중 커밋

--- a/webapp/assets/css/map/map.css
+++ b/webapp/assets/css/map/map.css
@@ -199,3 +199,11 @@ main{
 .map_detail{
   font-size: 14px;
 }
+
+/* 페이지 설명 */
+.site_info{
+  margin-top: 0px;
+  font-size: 20px;
+  background-color: #FFF8EF;
+  text-align: center;
+}
